--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.1",
+    "axios": "^1.8.4",
     "chart.js": "^4.4.8",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.4.1",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^3.0.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4",
-    "axios": "^1.4.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
